# IntelliBasket

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.app.yml  pyproject.toml
config/: analysis.toml
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: 01_项目背景与技术栈总结.md  02_编码规范与接口标准.md  03_数据接入与数仓验证记录.md  04_RFM与购物篮算法验证记录.md  05_API与服务层验证记录.md  06_Web驾驶舱与联调验证记录.md  07_第二阶段编码验收记录.md  08_模型增强数据与二次分析记录.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts  types.ts
frontend/src/components/: EChart.vue  LoadingState.vue  MetricCard.vue  PanelHeader.vue
frontend/src/router/: index.ts
frontend/src/styles/: global.css
frontend/src/views/: BasketView.vue  OverviewView.vue  RfmView.vue  StrategyView.vue
scripts/: export_hive_analytics.ps1  prepare_data.py  profile_source.py  run_hive_pipeline.ps1  setup_environment.ps1  start_demo.ps1  stop_demo.ps1  test_all.ps1  upload_to_hdfs.ps1
sql/hive/: 00_create_database.sql  01_ods.sql  02_dwd.sql  03_dimensions.sql  04_dws.sql  05_ads.sql  06_quality_checks.sql  07_export_analytics.sql
sql/mysql/: 00_create_database.sql
src/intellibasket/: __init__.py  cli.py  config.py
src/intellibasket/analytics/: __init__.py  augmentation.py  basket.py  models.py  pipeline.py  rfm.py
src/intellibasket/api/: __init__.py  app.py  repository.py  schemas.py
tests/analytics/: test_augmentation.py  test_basket.py  test_rfm.py
tests/api/: test_api.py
tests/data/: test_ingestion.py
(+5 files in other folders)
