[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "intellibasket"
version = "0.1.0"
description = "Customer intelligence and segmented market basket analytics platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "mlxtend>=0.23,<1.0",
  "numpy>=2.0,<3.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.2,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "pymysql>=1.1,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
intellibasket = "intellibasket.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/intellibasket"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["N802", "N803", "N806"]

